<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="viewmodel"
            type="com.ubec.ubecapp.ui.details.SupplyDetailsViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:textSize="10sp"
            android:text="@string/action_upload"
            app:icon="@drawable/ic_baseline_cloud_upload"/>

        <TextView
            android:id="@+id/tv_supplyinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supply_title"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutItemContractor"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/text_contractor"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:text="@={viewmodel.contractor}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutItemLocation"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/text_location"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:text="@={viewmodel.location}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutItemState"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/text_state"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:text="@={viewmodel.state}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutItemLGA"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/text_lga"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:text="@={viewmodel.lga}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutItemCoordinate"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/text_coordinate"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:text="@={viewmodel.coordinate}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutItemRep"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/supply_rep"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:text="@={viewmodel.representative}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutItemRepDesg"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/supply_rep_desg"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:text="@={viewmodel.representativeDesg}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutItemRepPhone"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/supply_rep_phone"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:text="@={viewmodel.representativePhone}"/>
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/tv_attachement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/text_attachment"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/tv_attachement1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/text_attachment1"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <TextView
            android:id="@+id/tv_attachement2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/text_attachment2"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <TextView
            android:id="@+id/tv_attachement3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/text_attachment3"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <TextView
            android:id="@+id/tv_attachement4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/text_attachment4"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <TextView
            android:id="@+id/tv_supplyiteminfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supply_item_title"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemList"
            android:name="com.ubec.ubecapp.ui.details.SupplyDetailsFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            tools:context=".ui.details.SupplyDetailsFragment"
            tools:listitem="@layout/fragment_item" />


    </LinearLayout>
    </ScrollView>
</layout>