<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" android:layout_margin="0dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:layout_margin="0dp">

    <Button
        android:id="@+id/btnBackSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:textSize="10sp"
        android:text="@string/text_back_supply"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutItemContractor"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/text_contractor"
        app:errorEnabled="true">
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutItemLocation"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/text_location"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutItemRep"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/supply_rep"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnAddSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:textSize="10sp"
        android:text="@string/text_add_item"
        app:icon="@drawable/ic_baseline_add_24"/>


    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/itemList"
    android:name="com.ubec.ubecapp.ui.newsupplyitems.ItemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_margin="0dp"
    app:layoutManager="LinearLayoutManager"
    tools:context=".ui.newsupplyitems.ItemFragment"
    tools:listitem="@layout/fragment_itemwithdelete" />

</LinearLayout>
    </ScrollView>
</layout>